--- a/config.json
+++ b/config.json
@@ -119,5 +119,24 @@
     }
   ],
   "watch_folders": [],
-  "refresh_folder": ""
+  "refresh_folder": "",
+  "saved_views": [
+    {
+      "name": "All",
+      "sources": [
+        "AI/Coco (Krista)",
+        "Campaigns (Kevin)",
+        "Coco Use Skill (Krista)",
+        "Conferences/Events (Aba)",
+        "Livestreams (Rida)",
+        "Medium (Kevin)",
+        "SVAI Events (Chad)"
+      ],
+      "locations": [
+        "All locations"
+      ],
+      "time_filter": "All",
+      "calendar_view": "dayGridMonth"
+    }
+  ]
 }
