--- a/config.json
+++ b/config.json
@@ -53,7 +53,7 @@
         ],
         "row_filter": {
           "column": "Event confirmed",
-          "value": "It's happening!,  Completed!"
+          "value": "Completed!"
         }
       },
       "source_url": "https://docs.google.com/spreadsheets/d/1pt5qSF5wgDk6y_dltEAAtBVDj441M-YaXTN0nsFqyQU/edit?gid=1233501903#gid=1233501903"
