Update config via app

--- a/config.json
+++ b/config.json
@@ -45,15 +45,10 @@
         "start": "Date",
         "end": "End time",
         "location": "Location",
-        "custom_fields": [
-          {
-            "label": "Confirmation",
-            "column": "Event confirmed"
-          }
-        ],
+        "custom_fields": [],
         "row_filter": {
           "column": "Event confirmed",
-          "value": "'Completed!', 'It's happening!'"
+          "value": "Completed!, It's happening!"
         }
       },
       "source_url": "https://docs.google.com/spreadsheets/d/1pt5qSF5wgDk6y_dltEAAtBVDj441M-YaXTN0nsFqyQU/edit?gid=1233501903#gid=1233501903"
