--- a/config.json
+++ b/config.json
@@ -45,12 +45,7 @@
         "start": "Date",
         "end": "End time",
         "location": "Location",
-        "custom_fields": [
-          {
-            "label": "Event time",
-            "column": "Start time"
-          }
-        ],
+        "custom_fields": [],
         "row_filter": {
           "column": "Event confirmed",
           "value": "Completed!, It's happening!"
