--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
       "mapping": {
         "title": "Title",
         "start": "Date",
+        "end": "Time Published",
         "custom_fields": [
           {
             "label": "Working Group",
