Update config via app

--- a/config.json
+++ b/config.json
@@ -53,6 +53,10 @@
           {
             "label": "Registration Link",
             "column": "Registration Link"
+          },
+          {
+            "label": "Start time",
+            "column": "Start time"
           }
         ],
         "row_filter": {
