Update config via app

--- a/config.json
+++ b/config.json
@@ -197,6 +197,25 @@
       ],
       "time_filter": "All",
       "calendar_view": "dayGridMonth"
+    },
+    {
+      "name": "All",
+      "sources": [
+        "AI/Coco (Krista)",
+        "Campaigns (Kevin)",
+        "Coco Use Skill (Krista)",
+        "Conferences/Events (Aba)",
+        "DG (Chris)",
+        "DSH Content (Ami)",
+        "Livestreams (Rida)",
+        "Medium (Kevin)",
+        "SVAI Events (Chad)"
+      ],
+      "locations": [
+        "All locations"
+      ],
+      "time_filter": "All",
+      "calendar_view": "dayGridFourWeek"
     }
   ]
 }
